--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -64,7 +64,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.ubc.ca/MDS-2022-23/DSCI_573_lab4_hcwang24"
+    "https://github.com/UBC-MDS/AirBNB_Luke_HanChen_573lab4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Authors:\n",
+    "* Luke Yang (lukeyf)\n",
+    "* HanChen Wang (hcwang24)"
    ]
   },
   {
