--- a/lab4luke.ipynb
+++ b/lab4luke.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -131,11 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -305,14 +312,14 @@
        "4               0.10                               1                 0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "print(\"hello\")\n",
     "df = pd.read_csv('data/AB_NYC_2019.csv')\n",
     "df.head()"
    ]
@@ -1789,9 +1796,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('MDS')",
+   "display_name": "Python [conda env:573]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-573-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1803,7 +1810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6"
   },
   "otter": {
    "OK_FORMAT": true,
