Completing the data set EDA

--- a/lab4luke.ipynb
+++ b/lab4luke.ipynb
@@ -312,6 +312,13 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import altair as alt\n",
+    "from altair_data_server import data_server\n",
+    "\n",
+    "# Save a vega-lite spec and a PNG blob for each plot in the notebook\n",
+    "alt.renderers.enable('mimetype')\n",
+    "# Handle large data sets without embedding them in the notebook\n",
+    "alt.data_transformers.enable('data_server')\n",
     "\n",
     "df = pd.read_csv('data/AB_NYC_2019.csv')\n",
     "df.head()"
