Rerun all selections

--- a/lab4-main.ipynb
+++ b/lab4-main.ipynb
@@ -3242,11 +3242,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/573/lib/python3.10/site-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
+      "150 fits failed out of a total of 1500.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "150 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/miniconda3/envs/573/lib/python3.10/site-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/opt/miniconda3/envs/573/lib/python3.10/site-packages/sklearn/pipeline.py\", line 382, in fit\n",
+      "    self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
+      "  File \"/opt/miniconda3/envs/573/lib/python3.10/site-packages/catboost/core.py\", line 5590, in fit\n",
+      "    return self._fit(X, y, cat_features, None, None, None, sample_weight, None, None, None, None, baseline,\n",
+      "  File \"/opt/miniconda3/envs/573/lib/python3.10/site-packages/catboost/core.py\", line 2262, in _fit\n",
+      "    train_params = self._prepare_train_params(\n",
+      "  File \"/opt/miniconda3/envs/573/lib/python3.10/site-packages/catboost/core.py\", line 2194, in _prepare_train_params\n",
+      "    _check_train_params(params)\n",
+      "  File \"_catboost.pyx\", line 6032, in _catboost._check_train_params\n",
+      "  File \"_catboost.pyx\", line 6051, in _catboost._check_train_params\n",
+      "_catboost.CatBoostError: catboost/private/libs/options/boosting_options.cpp:79: Learning rate should be non-zero\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/opt/miniconda3/envs/573/lib/python3.10/site-packages/sklearn/model_selection/_search.py:953: UserWarning: One or more of the test scores are non-finite: [       nan        nan        nan        nan        nan        nan\n",
+      " 0.61464115 0.61989904 0.61576125 0.6118937  0.61575686 0.61126072\n",
+      " 0.6040651  0.59353585 0.59475144 0.59203644 0.59343219 0.59840217\n",
+      " 0.58432197 0.5766727  0.57369137 0.57587403 0.5833048  0.58257124\n",
+      " 0.56493425 0.54968004 0.55719897 0.57141112 0.57704438 0.57109641\n",
+      " 0.53955768 0.53899515 0.554228   0.55738856 0.56099214 0.55349344\n",
+      " 0.53449044 0.5223548  0.52951072 0.53202443 0.52760193 0.52367828\n",
+      " 0.50490637 0.50458973 0.49642689 0.51405641 0.50774247 0.51880791\n",
+      " 0.47893217 0.48033509 0.49445636 0.4743477  0.49583611 0.49915103\n",
+      " 0.45359929 0.46965858 0.44425385 0.4672175  0.46543286 0.46753784\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.62126801 0.62139473 0.61567445 0.61702611 0.62064036 0.6163827\n",
+      " 0.60422934 0.59957701 0.60013501 0.60106706 0.59843114 0.60220405\n",
+      " 0.58925766 0.58371402 0.58755615 0.5847569  0.58544638 0.5894955\n",
+      " 0.57357809 0.57009452 0.57111724 0.57078447 0.57874707 0.58378189\n",
+      " 0.54809451 0.5505831  0.5469335  0.55711565 0.55921601 0.55728456\n",
+      " 0.54739366 0.53005494 0.53031809 0.54418463 0.53983264 0.54901767\n",
+      " 0.51978551 0.51187976 0.51815079 0.52243144 0.52380631 0.52366782\n",
+      " 0.50174946 0.48320511 0.50599879 0.49820385 0.50895524 0.50462461\n",
+      " 0.46506815 0.47590032 0.47679363 0.49602532 0.49702019 0.49043312\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.62164268 0.62372221 0.62520674 0.62500221 0.62416088 0.61830069\n",
+      " 0.61324195 0.60936292 0.60958991 0.60845845 0.60476977 0.60787638\n",
+      " 0.60379575 0.59506913 0.59415103 0.59564282 0.59318475 0.59578729\n",
+      " 0.59344327 0.57972088 0.56989882 0.58922787 0.58470059 0.58134256\n",
+      " 0.57464489 0.56327912 0.56796713 0.56128765 0.57249229 0.57168462\n",
+      " 0.56343901 0.55739704 0.55061314 0.55487706 0.5541811  0.55790922\n",
+      " 0.54907271 0.53230278 0.54536761 0.52708103 0.54581755 0.5400417\n",
+      " 0.52013098 0.52622002 0.52765916 0.52363139 0.53834073 0.53369097\n",
+      " 0.49817447 0.50014095 0.50361884 0.50978131 0.52289883 0.51679383\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.61995228 0.62626449 0.62543462 0.62460784 0.62295649 0.62101019\n",
+      " 0.61706684 0.61892883 0.61271321 0.61398945 0.61086078 0.6110771\n",
+      " 0.61000454 0.60986324 0.60059369 0.59804021 0.60194217 0.60006281\n",
+      " 0.59959236 0.58629767 0.5896773  0.58816417 0.58947742 0.59428459\n",
+      " 0.58623337 0.58031299 0.57841034 0.57368112 0.57752499 0.58501261\n",
+      " 0.57704132 0.56936122 0.57232813 0.56604043 0.56286306 0.57324667\n",
+      " 0.55642148 0.55673644 0.54956016 0.54807458 0.56055651 0.56470758\n",
+      " 0.5552206  0.53895708 0.53337713 0.53198361 0.54861983 0.55143777\n",
+      " 0.52848895 0.52620951 0.52880742 0.52682047 0.53215638 0.51826704\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.61811939 0.61986001 0.62092476 0.62624259 0.62510631 0.62280678\n",
+      " 0.61615612 0.61933207 0.62091474 0.61637524 0.61859995 0.61889174\n",
+      " 0.61021779 0.61307449 0.60974696 0.60872438 0.61368087 0.6073098\n",
+      " 0.61107444 0.60037646 0.60359322 0.60162712 0.60381423 0.59804279\n",
+      " 0.59792469 0.5879091  0.59065362 0.59510784 0.58881543 0.58625113\n",
+      " 0.58365492 0.58502287 0.58587591 0.5846098  0.57512003 0.58050992\n",
+      " 0.58120751 0.5722244  0.57268903 0.56703085 0.57134357 0.57085414\n",
+      " 0.56604506 0.56506876 0.54625302 0.56037262 0.56060845 0.55524799\n",
+      " 0.56023498 0.53725894 0.54404364 0.54865729 0.5496028  0.54704349]\n",
+      "  warnings.warn(\n",
+      "/opt/miniconda3/envs/573/lib/python3.10/site-packages/sklearn/model_selection/_search.py:953: UserWarning: One or more of the train scores are non-finite: [       nan        nan        nan        nan        nan        nan\n",
+      " 0.82378693 0.86947786 0.9105326  0.94205062 0.96519718 0.98087348\n",
+      " 0.88602764 0.93157717 0.96323635 0.98237191 0.99290331 0.99734356\n",
+      " 0.92389245 0.96243802 0.98331879 0.99371756 0.99817054 0.99951854\n",
+      " 0.94502391 0.97682708 0.99166567 0.99745809 0.9994057  0.99989467\n",
+      " 0.95889193 0.98512238 0.99560072 0.99888206 0.99980473 0.99997631\n",
+      " 0.96848154 0.98987368 0.99735423 0.99949651 0.99993159 0.99999484\n",
+      " 0.97470772 0.99271346 0.99844375 0.9997529  0.99997562 0.99999875\n",
+      " 0.97929791 0.99460948 0.99903465 0.99987438 0.99999141 0.99999969\n",
+      " 0.98314411 0.9961348  0.99937236 0.99993777 0.99999664 0.99999992\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.80740654 0.85131459 0.89095672 0.92264586 0.94921635 0.96890105\n",
+      " 0.86978547 0.91714784 0.95060953 0.97315709 0.98669071 0.99419366\n",
+      " 0.90780741 0.95025132 0.9752478  0.98946364 0.99590455 0.99865445\n",
+      " 0.9321612  0.96816405 0.98718134 0.99537104 0.99859596 0.99965557\n",
+      " 0.9482292  0.9789926  0.99239669 0.99775204 0.99944392 0.99989994\n",
+      " 0.96165117 0.98564333 0.99550185 0.99886529 0.99977328 0.99996927\n",
+      " 0.96810803 0.98969268 0.99717242 0.99942344 0.99990917 0.9999898\n",
+      " 0.97423023 0.99242859 0.99818696 0.99968882 0.9999626  0.99999708\n",
+      " 0.97906335 0.99427365 0.9987266  0.99982528 0.99998396 0.99999904\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.7745444  0.81118759 0.84732359 0.87949057 0.90960025 0.93348536\n",
+      " 0.83387312 0.87947883 0.91544694 0.94403843 0.96606027 0.97925639\n",
+      " 0.87402255 0.91755238 0.95130142 0.97207182 0.98553724 0.99323678\n",
+      " 0.90179141 0.94446688 0.97064074 0.98597302 0.99363105 0.99744571\n",
+      " 0.92171432 0.96139721 0.98174758 0.99246573 0.99699983 0.99906979\n",
+      " 0.93938555 0.97268469 0.98797327 0.99556749 0.99855217 0.99960767\n",
+      " 0.95108384 0.97952728 0.99255379 0.99742501 0.99931324 0.99983881\n",
+      " 0.96035872 0.98468344 0.99475308 0.99850619 0.9996396  0.99993023\n",
+      " 0.96767602 0.9887083  0.99644816 0.99903666 0.99980143 0.99996855\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.74580863 0.77595692 0.80684883 0.83563288 0.86060269 0.88747942\n",
+      " 0.79540793 0.83650149 0.87514008 0.90344918 0.93163439 0.95205073\n",
+      " 0.83649664 0.88033636 0.9167793  0.94380978 0.96297044 0.97836209\n",
+      " 0.8668299  0.91069225 0.94415164 0.96664128 0.98036199 0.98934935\n",
+      " 0.88967197 0.934064   0.96194777 0.97932457 0.98928824 0.99490863\n",
+      " 0.90846216 0.94969056 0.97433838 0.98703285 0.99402406 0.99760863\n",
+      " 0.92609799 0.9609238  0.98184827 0.99192747 0.99671748 0.99880206\n",
+      " 0.938321   0.97076366 0.98627524 0.99472478 0.99824685 0.99934279\n",
+      " 0.94807098 0.9779326  0.99045032 0.99654607 0.99873699 0.99964118\n",
+      "        nan        nan        nan        nan        nan        nan\n",
+      " 0.71847688 0.74414399 0.76508046 0.78681991 0.81119665 0.83070501\n",
+      " 0.75944331 0.7907944  0.82328191 0.85262228 0.87725887 0.90065612\n",
+      " 0.79234357 0.83141291 0.86555299 0.89676222 0.91974237 0.94158339\n",
+      " 0.81910867 0.86190508 0.89979166 0.92785828 0.94965775 0.96641281\n",
+      " 0.84638709 0.88726054 0.92513981 0.94595776 0.96694845 0.97889632\n",
+      " 0.8689247  0.90970605 0.94382674 0.9644058  0.97847937 0.98732661\n",
+      " 0.88451049 0.92682585 0.95669102 0.97505268 0.9858353  0.99271512\n",
+      " 0.90039361 0.94100694 0.96700924 0.98218087 0.99147018 0.99556776\n",
+      " 0.91566034 0.9534974  0.97501234 0.98770908 0.99448359 0.99728913]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6262644942551274"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "param_grid = {\n",
@@ -3271,9 +3414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'catboostregressor__l2_leaf_reg': 10,\n",
+       " 'catboostregressor__learning_rate': 0.1,\n",
+       " 'catboostregressor__max_depth': 5}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_search.best_params_"
    ]
@@ -3310,24 +3466,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Feature Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>days_from_last_review</td>\n",
+       "      <td>41.884129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>number_of_reviews</td>\n",
+       "      <td>24.823181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>minimum_nights</td>\n",
+       "      <td>13.420129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>availability_365</td>\n",
+       "      <td>6.579590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>price</td>\n",
+       "      <td>2.581386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>neighbourhood_North Riverdale</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>neighbourhood_Oakwood</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>neighbourhood_Arrochar</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>neighbourhood_Pelham Gardens</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>neighbourhood_New Springville</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>263 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Feature  Feature Importance\n",
+       "5            days_from_last_review           41.884129\n",
+       "2                number_of_reviews           24.823181\n",
+       "1                   minimum_nights           13.420129\n",
+       "4                 availability_365            6.579590\n",
+       "0                            price            2.581386\n",
+       "..                             ...                 ...\n",
+       "134  neighbourhood_North Riverdale            0.000000\n",
+       "136          neighbourhood_Oakwood            0.000000\n",
+       "13          neighbourhood_Arrochar            0.000000\n",
+       "142   neighbourhood_Pelham Gardens            0.000000\n",
+       "131  neighbourhood_New Springville            0.000000\n",
+       "\n",
+       "[263 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a table showing feature importances.\n",
     "feat_importance = grid_search.best_estimator_.named_steps[\"catboostregressor\"].feature_importances_\n",
     "\n",
-    "# transformed data\n",
-    "preprocessor.fit(X_train, y_train)\n",
-    "X_train_transformed = preprocessor.transform(X_train)\n",
-    "ohe_features = (\n",
-    "    preprocessor.named_transformers_[\"onehotencoder\"].get_feature_names_out().tolist()\n",
-    ")\n",
-    "\n",
     "# Code to get all the feature names\n",
-    "feature_names = numerical_features + ohe_features\n",
+    "feature_names = numeric_features + ohe_features + discretization_features\n",
     "\n",
     "pd.DataFrame({\"Feature\": feature_names, \"Feature Importance\": feat_importance}).sort_values(\n",
     "    by=\"Feature Importance\", ascending=False\n",
