--- a/lab4luke copy.ipynb
+++ b/lab4luke copy.ipynb
@@ -1732,8 +1732,7 @@
    "metadata": {},
    "source": [
     "1. The code below shows the best-performing model's score on the test set.\n",
-    "2. Yes, the test score is slightly better than the cross-validation score. The test set is partitioned relatively large; thus the result could be trusted. I do not think the optimization bias is influencing the results as we are using a reasonably large search range and the large test set's score is better than the validation score.\n",
-    "3. "
+    "2. Yes, the test score is slightly better than the cross-validation score. The test set is partitioned relatively large; thus the result could be trusted. I do not think the optimization bias is influencing the results as we are using a reasonably large search range and the large test set's score is better than the validation score."
    ]
   },
   {
@@ -1859,7 +1858,6 @@
     }
    ],
    "source": [
-    "\n",
     "shap.force_plot(\n",
     "    cat_explainer.expected_value,\n",
     "    test_cat_shap_values[1, :],\n",
