--- a/lab4luke copy.ipynb
+++ b/lab4luke copy.ipynb
@@ -802,6 +802,355 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_group</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>availability_365</th>\n",
+       "      <th>time_from_last_review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2539</td>\n",
+       "      <td>Clean &amp; quiet apt home by the park</td>\n",
+       "      <td>2787</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Kensington</td>\n",
+       "      <td>40.64749</td>\n",
+       "      <td>-73.97237</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>6</td>\n",
+       "      <td>365</td>\n",
+       "      <td>-22636800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2595</td>\n",
+       "      <td>Skylit Midtown Castle</td>\n",
+       "      <td>2845</td>\n",
+       "      <td>Jennifer</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Midtown</td>\n",
+       "      <td>40.75362</td>\n",
+       "      <td>-73.98377</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2019-05-21</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>2</td>\n",
+       "      <td>355</td>\n",
+       "      <td>-4147200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3831</td>\n",
+       "      <td>Cozy Entire Floor of Brownstone</td>\n",
+       "      <td>4869</td>\n",
+       "      <td>LisaRoxanne</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Clinton Hill</td>\n",
+       "      <td>40.68514</td>\n",
+       "      <td>-73.95976</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>270</td>\n",
+       "      <td>2019-07-05</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>194</td>\n",
+       "      <td>-259200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5022</td>\n",
+       "      <td>Entire Apt: Spacious Studio/Loft by central park</td>\n",
+       "      <td>7192</td>\n",
+       "      <td>Laura</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>East Harlem</td>\n",
+       "      <td>40.79851</td>\n",
+       "      <td>-73.94399</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>80</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-11-19</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-19958400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5099</td>\n",
+       "      <td>Large Cozy 1 BR Apartment In Midtown East</td>\n",
+       "      <td>7322</td>\n",
+       "      <td>Chris</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Murray Hill</td>\n",
+       "      <td>40.74767</td>\n",
+       "      <td>-73.97500</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>129</td>\n",
+       "      <td>-1382400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48782</th>\n",
+       "      <td>36425863</td>\n",
+       "      <td>Lovely Privet Bedroom with Privet Restroom</td>\n",
+       "      <td>83554966</td>\n",
+       "      <td>Rusaa</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Upper East Side</td>\n",
+       "      <td>40.78099</td>\n",
+       "      <td>-73.95366</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-07-07</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>147</td>\n",
+       "      <td>-86400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48790</th>\n",
+       "      <td>36427429</td>\n",
+       "      <td>No.2 with queen size bed</td>\n",
+       "      <td>257683179</td>\n",
+       "      <td>H Ai</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Flushing</td>\n",
+       "      <td>40.75104</td>\n",
+       "      <td>-73.81459</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-07-07</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>339</td>\n",
+       "      <td>-86400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48799</th>\n",
+       "      <td>36438336</td>\n",
+       "      <td>Seas The Moment</td>\n",
+       "      <td>211644523</td>\n",
+       "      <td>Ben</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Great Kills</td>\n",
+       "      <td>40.54179</td>\n",
+       "      <td>-74.14275</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>235</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-07-07</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87</td>\n",
+       "      <td>-86400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48805</th>\n",
+       "      <td>36442252</td>\n",
+       "      <td>1B-1B apartment near by Metro</td>\n",
+       "      <td>273841667</td>\n",
+       "      <td>Blaine</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Mott Haven</td>\n",
+       "      <td>40.80787</td>\n",
+       "      <td>-73.92400</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-07-07</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>-86400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48852</th>\n",
+       "      <td>36455809</td>\n",
+       "      <td>Cozy Private Room in Bushwick, Brooklyn</td>\n",
+       "      <td>74162901</td>\n",
+       "      <td>Christine</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Bushwick</td>\n",
+       "      <td>40.69805</td>\n",
+       "      <td>-73.92801</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-07-08</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38843 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id                                              name    host_id  \\\n",
+       "0          2539                Clean & quiet apt home by the park       2787   \n",
+       "1          2595                             Skylit Midtown Castle       2845   \n",
+       "3          3831                   Cozy Entire Floor of Brownstone       4869   \n",
+       "4          5022  Entire Apt: Spacious Studio/Loft by central park       7192   \n",
+       "5          5099         Large Cozy 1 BR Apartment In Midtown East       7322   \n",
+       "...         ...                                               ...        ...   \n",
+       "48782  36425863        Lovely Privet Bedroom with Privet Restroom   83554966   \n",
+       "48790  36427429                          No.2 with queen size bed  257683179   \n",
+       "48799  36438336                                   Seas The Moment  211644523   \n",
+       "48805  36442252                     1B-1B apartment near by Metro  273841667   \n",
+       "48852  36455809           Cozy Private Room in Bushwick, Brooklyn   74162901   \n",
+       "\n",
+       "         host_name neighbourhood_group    neighbourhood  latitude  longitude  \\\n",
+       "0             John            Brooklyn       Kensington  40.64749  -73.97237   \n",
+       "1         Jennifer           Manhattan          Midtown  40.75362  -73.98377   \n",
+       "3      LisaRoxanne            Brooklyn     Clinton Hill  40.68514  -73.95976   \n",
+       "4            Laura           Manhattan      East Harlem  40.79851  -73.94399   \n",
+       "5            Chris           Manhattan      Murray Hill  40.74767  -73.97500   \n",
+       "...            ...                 ...              ...       ...        ...   \n",
+       "48782        Rusaa           Manhattan  Upper East Side  40.78099  -73.95366   \n",
+       "48790         H Ai              Queens         Flushing  40.75104  -73.81459   \n",
+       "48799          Ben       Staten Island      Great Kills  40.54179  -74.14275   \n",
+       "48805       Blaine               Bronx       Mott Haven  40.80787  -73.92400   \n",
+       "48852    Christine            Brooklyn         Bushwick  40.69805  -73.92801   \n",
+       "\n",
+       "             room_type  price  minimum_nights  number_of_reviews last_review  \\\n",
+       "0         Private room    149               1                  9  2018-10-19   \n",
+       "1      Entire home/apt    225               1                 45  2019-05-21   \n",
+       "3      Entire home/apt     89               1                270  2019-07-05   \n",
+       "4      Entire home/apt     80              10                  9  2018-11-19   \n",
+       "5      Entire home/apt    200               3                 74  2019-06-22   \n",
+       "...                ...    ...             ...                ...         ...   \n",
+       "48782     Private room    129               1                  1  2019-07-07   \n",
+       "48790     Private room     45               1                  1  2019-07-07   \n",
+       "48799     Private room    235               1                  1  2019-07-07   \n",
+       "48805  Entire home/apt    100               1                  2  2019-07-07   \n",
+       "48852     Private room     30               1                  1  2019-07-08   \n",
+       "\n",
+       "       reviews_per_month  calculated_host_listings_count  availability_365  \\\n",
+       "0                   0.21                               6               365   \n",
+       "1                   0.38                               2               355   \n",
+       "3                   4.64                               1               194   \n",
+       "4                   0.10                               1                 0   \n",
+       "5                   0.59                               1               129   \n",
+       "...                  ...                             ...               ...   \n",
+       "48782               1.00                               1               147   \n",
+       "48790               1.00                               6               339   \n",
+       "48799               1.00                               1                87   \n",
+       "48805               2.00                               1                40   \n",
+       "48852               1.00                               1                 1   \n",
+       "\n",
+       "       time_from_last_review  \n",
+       "0                -22636800.0  \n",
+       "1                 -4147200.0  \n",
+       "3                  -259200.0  \n",
+       "4                -19958400.0  \n",
+       "5                 -1382400.0  \n",
+       "...                      ...  \n",
+       "48782               -86400.0  \n",
+       "48790               -86400.0  \n",
+       "48799               -86400.0  \n",
+       "48805               -86400.0  \n",
+       "48852                    0.0  \n",
+       "\n",
+       "[38843 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
