--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -4815,9 +4815,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:573]",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
-   "name": "conda-env-573-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4829,7 +4829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.0"
   },
   "otter": {
    "OK_FORMAT": true,
@@ -4837,7 +4837,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "63efc083453448458060aa2c1f069a7755b55a462b5fce058c1dca82068700dd"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
